2021. 5. 5. Debugged zMShape3DBBall. [zeo_mshape3d]
2021. 5. 5. Added zMShape3DVertList and zMShape3DBBall. [zeo_mshape3d]
2021. 5. 5. Reordered objects. [src/makefile]
2021. 5. 5. Corrected examples to conform to the new specifications. [example]
2021. 5. 4. Renamed zTri3DListInsert to zTri3DListAdd missed in the previous revision. [zeo_elem3d_list]
2021. 5. 4. Modified methods for abstraction of zShape3D. [zeo_shape3d_*]
2021. 5. 4. Added z*3DFPrintZTK and reimplemented _zShape3D*FPrintZTK. [zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl]
2021. 5. 3. Modified zeo_bv3d_aabb. [zeo_bv3d_aabb]
2021. 5. 3. Reflected new file names to examples. [example]
2021. 5. 3. Renamed zeo_color, zeo_optic and zeo_texture to zeo_render_color, zeo_render_optic and zeo_render_texture, respectively. [zeo_render_color, zeo_render_optic, zeo_render_texture]
2021. 5. 3. Renamed zeo_bv* to zeo_bv2d*. [zeo_bv3d*, app]
2021. 5. 3. Renamed zeo_bv_ch2 to zeo_bv2d_ch and created zeo_bv2d. [zeo_bv2d, zeo_bv2d_ch]
2021. 5. 3. Renamed zeo_mshape to zeo_mshape3d. [zeo_mshape3d, app]
2021. 5. 3. Renamed zeo_shape* to zeo_shape3d*. [zeo_shape3d*]
2021. 5. 3. Renamed zeo_elem* to zeo_elem3d*. [zeo_elem3d*]
2021. 5. 3. Renamed zeo_frame to zeo_frame3d. [zeo_frame3d]
2021. 5. 3. Renamed zeo_tri2d to zeo_elem2d. [zeo_elem2d]
2021. 5. 2. Renamed zVec3DArrayAppendList to zVec3DListAppendArray and changed specification. [zeo_vec3d_list]
2021. 5. 2. Abolished zVec3DListReg. [zeo_vec3d_list]
2021. 5. 2. Added zVec3DArrayAppendList and modified zVec3DArray2List. [zeo_vec3d_list]
2021. 4.30. Debugged _zOBJFReadPH3D. [zeo_ph_obj]
2021. 4.30. Added zShape3DFReadOBJ and modified _zShape3DImportFromZTK. [zeo_shape]
2021. 4.30. Added _zShape3DAssignPH. [zeo_shape]
2021. 4.30. Added zPH3DFReadOBJ. [zeo_ph, zeo_ph_obj]
2021. 4.29. Debugged _zDAEMeshList2PH3D. [zeo_ph_dae]
2021. 4.29. Modified app/makefile to define __ZEO_USE_DAE. [app]