@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.8.3
+VERSION=1.8.4
 
 DEPENDENCY="zeda=1.5.0;zm=1.3.0"
 
